removed options unsupported off java-1.8 in pom.xml, maven configuration